--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animatescroll.js": "^1.0.7",
+    "aos": "^2.3.4",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.4.1",
+    "": "^2.3.4",
+    "popper.js": "^1.16.1",
+    "typed.js": "^2.0.11",
     "vue": "^2.6.11"
   },
   "devDependencies": {
