--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "typed.js": "^2.0.11",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-animate-scroll": "^0.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
